syntax = "proto3";

package feed_service;

option go_package = "github.com/ebilsanta/social-network/backend/complex_services/feed_complex_service/services/proto";

import "google/protobuf/wrappers.proto";

service FeedService {
  rpc GetFeed (GetFeedRequest) returns (GetFeedResponse) {}
}

message GetFeedRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetFeedResponse {
  repeated int64 data = 1;
  FeedPaginationMetadata pagination = 2;
}

message FeedPaginationMetadata {
  int64 totalRecords = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  google.protobuf.Int32Value nextPage = 4;
  google.protobuf.Int32Value prevPage = 5;
  bool fromCache = 6;
}
