syntax = "proto3";

package post_service;

option go_package = "github.com/ebilsanta/social-network/backend/feed-service/api/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service PostSeservice PostService {
  rpc CreatePost (CreatePostRequest) returns (Post) {}
  rpc GetPost (GetPostRequest) returns (Post) {}
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse) {}
  rpc GetPostsByPostIds (GetPostsByIdsRequest) returns (GetPostsResponse) {}
  rpc GetPostsByUserId (GetPostsByUserRequest) returns (GetPostsPaginatedResponse) {}
  rpc GetPostsByUserIds (GetPostsByUsersRequest) returns (GetPostsResponse) {}
}

message CreatePostRequest {
  string caption = 1;
  string image = 2;
  string userId = 3;
}

message Post {
  int64 id = 1;
  string caption = 2;
  string image = 3;
  string userId = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp deletedAt = 6;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostsRequest {}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostsByIdsRequest {
  repeated int64 postIds = 1;
}

message GetPostsByUserRequest {
  string id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message GetPostsByUsersRequest {
  repeated string userIds = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message GetPostsPaginatedResponse {
  repeated Post data = 1;
  PostPaginationMetadata pagination = 2;
}

message PostPaginationMetadata {
  int32 totalRecords = 1;
  int32 currentPage = 2;
  int32 totalPages = 3;
  google.protobuf.Int32Value nextPage = 4;
  google.protobuf.Int32Value prevPage = 5;
}
