syntax = "proto3";

package user_service;

option go_package = "github.com/ebilsanta/social-network/backend/complex_services/post_service/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (User) {}
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (User) {}
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
  rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse) {}
  rpc CreateUser (CreateUserRequest) returns (User) {}
  rpc UpdateUser (UpdateUserRequest) returns (User) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUsersRequest {
  string query = 1;
  int64 page = 2;
  int64 limit = 3;
}

message CreateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string username = 4;
  string image = 5;
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string username = 4;
  optional string image = 5;
}

message GetUsersResponse {
  repeated User data = 1;
  UserPaginationMetadata pagination = 2;
}

message GetUsersByIdsResponse {
  repeated User data = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string username = 4;
  string image = 5;
  uint32 postCount = 6;
  uint32 followerCount = 7;
  uint32 followingCount = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp deletedAt = 10;
}

message UserPaginationMetadata {
  int64 totalRecords = 1;
  int64 currentPage = 2;
  int64 totalPages = 3;
  google.protobuf.Int32Value nextPage = 4;
  google.protobuf.Int32Value prevPage = 5;
}
